--- a/homePage.html
+++ b/homePage.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Nomad Mystic | Web Desgin &amp; Development</title>
 	<link rel="stylesheet" href="bower_components/fullpage.js/jquery.fullPage.css">
+    <link rel="stylesheet" href="_/css/font-awesome.min.css"/>
 	<link rel="stylesheet" href="stylesheets/styles.css">
 </head>
 <body>
@@ -107,7 +108,17 @@
   
   	<div class="homePageVisibleContent" id="fullpage">
   		<div  class="section active" id="sectionOne">
-				<h2>sectionOne</h2>
+            <h2>sectionOne</h2>
+            <audio class ="audioVideoPlayer"  name="audioVideoPlayer" src="_/audio/praiseYou.mp3" ></audio>
+		    <div class="audioVideoControls">
+                <div class="playButton"><span class="fa fa-play"></span></div>
+                <div class="pauseButton"><span class="fa fa-pause"></span></div>
+                <div class="stopButton"><span class="fa fa-stop"></span></div>
+                <div class="progressbarContainer">
+                    <div class="audioVideoBar"></div>
+                </div>
+
+            </div>
   		</div>
 		<div class="section" id="sectionTwo">
 			<div class="sectionTwoAnimations">
