This is the forth commit. I added a few javascript animations for the audio and video controls. I also added a javascript animation for the menu button rotating 45 degrees. Created and added a SVG for the audio/video menu button.

--- a/homePage.html
+++ b/homePage.html
@@ -97,27 +97,26 @@
 
   <header class="main-header">
     <a href="#hiddenContent" class="open-menu">
-      ☰
+     <span class="fa fa-plus"></span>
     </a>
     <a href="#" class="close-menu">
-      ☰
+		<span class="fa fa-plus"></span>
     </a>
-    
-    
   </header>
   
   	<div class="homePageVisibleContent" id="fullpage">
   		<div  class="section active" id="sectionOne">
             <h2>sectionOne</h2>
             <audio class ="audioVideoPlayer"  name="audioVideoPlayer" src="_/audio/praiseYou.mp3" ></audio>
-		    <div class="audioVideoControls">
+
+            <img src="_/assets/audioVideoMenuButton.svg" alt="" class="audioVideoMenuButton"/>
+            <div class="audioVideoControls">
                 <div class="playButton"><span class="fa fa-play"></span></div>
                 <div class="pauseButton"><span class="fa fa-pause"></span></div>
                 <div class="stopButton"><span class="fa fa-stop"></span></div>
                 <div class="progressbarContainer">
                     <div class="audioVideoBar"></div>
                 </div>
-
             </div>
   		</div>
 		<div class="section" id="sectionTwo">
