--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
   	<div class="homePageVisibleContent" id="fullpage">
   		<div  class="section active" id="sectionOne">
             <h2>sectionOne</h2>
-            <audio class ="audioVideoPlayer"  name="audioVideoPlayer" src="_/audio/praiseYou.mp3" ></audio>
+            <audio class ="audioPlayer"  name="audioPlayer" src="_/audio/praiseYou.mp3" autoplay ></audio>
 
             <img src="_/assets/audioVideoMenuButton.svg" alt="" class="audioVideoMenuButton"/>
             <div class="audioVideoControls">
@@ -244,6 +244,7 @@
 <!-- <script src="bower_components/scrollmagic/scrollmagic/minified/plugins/animation.gsap.min.js"></script> -->
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/fullpage.js/jquery.fullPage.min.js"></script>
+<script src="_/js/jquery-mousewheel/jquery.mousewheel.js"></script>
 <script src="bower_components/gsap/src/minified/TweenMax.min.js"></script>
 <script src="_/components/js/scripts.js"></script>
 <script src="http://localhost:35729/livereload.js"></script>
