This is the 9th commit and push to remote for newNomadMystic. I added inline SVG layout for section two of the home page which fixed some issues I was having with responsiveness for mobile display. Removed unnecessary Javascript from css-tricks example, but will use later on other parts of the project.

--- a/index1.html
+++ b/index1.html
@@ -47,7 +47,7 @@
   	<div class="homePageVisibleContent" id="fullpage">
         <div  class="section active" id="sectionOne">
             <h2>sectionOne</h2>
-            <audio class ="audioPlayer" src="_/audio/praiseYou.mp3" autoplay ></audio>
+            <audio class ="audioPlayer" src="" autoplay ></audio>
 			<!--src="_/audio/praiseYou.mp3"-->
 
             <img src="_/assets/audioVideoMenuButton.svg" alt="" class="audioVideoMenuButton"/>
@@ -62,45 +62,68 @@
   		</div>
 		<div class="section" id="sectionTwo">
             <div class="sectionTwoAnimations">
-				<div>
-					<div class="floatLeft">
-						<img src="_/assets/homePageTwoHexTriangle.svg" class="homePageTwoHexTriangle" alt="Testing">
-					</div>
-					<div class="floatLeft">
-						<img src="_/assets/homePageTwoTitleBullet.svg" class="homePageTwoTitleBullet" alt="Testing">
-					</div>
-					<div class="floatLeft">
-						<h2>Nomad Mystic</h2>
-					</div>
-				</div>
-				<div class="clearBoth"></div>
-				<div class="homePageAnimationSectionTwo">
-                    <span class="homePageAnimationSectionTwoInner">
-                        <div class="floatLeft">
-                            <img src="_/assets/homePageTwoBulletLines.svg" class="homePageTwoBulletLines img-responsive" alt="Testing">
-                        </div>
-                        <div class="floatLeft">
-                            <img src="_/assets/homePageTwoSmallHeaderHex.svg" class="homePageTwoSmallHeaderHexOne img-responsive" alt="Testing">
-                        </div>
-                        <div class="floatLeft">
-                            <img src="_/assets/homePageTwoSmallHeaderHex.svg" class="homePageTwoSmallHeaderHexTwo img-responsive" alt="Testing">
-                        </div>
-                        <div class="floatLeft">
-                            <img src="_/assets/homePageTwoSmallHeaderHex.svg" class="homePageTwoSmallHeaderHexThree img-responsive"  alt="Testing">
-                        </div>
+                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+	            viewBox="0 0 1400 1000" style="enable-background:new 0 0 1200 800;" xml:space="preserve" id="sectionTwoSVG">
+                <g id="Layer_2">
+                    <polygon class="st2" points="39,119.3 158.5,50.5 278,119.3 278,257 158.5,325.8 39,257 	"/>
+                    <polygon class="st3" points="317,188.1 195.6,256.9 74.1,325.6 74.1,188.1 74.1,50.7 195.6,119.4 	"/>
+                    <polygon class="st2" points="435,211.3 395,234.5 355,211.3 355,164.7 395,141.5 435,164.7 	"/>
+                    <g>
+                        <line class="st3" x1="395" y1="330" x2="395" y2="690"/>
+                        <line class="st3" x1="393" y1="335" x2="433" y2="335"/>
+                        <line class="st3" x1="393" y1="511" x2="433" y2="511"/>
+                        <line class="st3" x1="391" y1="686" x2="431" y2="686"/>
+                    </g>
+                    <polygon class="st2" points="453,319.9 479,304.8 505,319.9 505,350.1 479,365.2 453,350.1 	"/>
+                    <polygon class="st2" points="453,495.9 479,480.8 505,495.9 505,526.1 479,541.2 453,526.1 	"/>
+                    <polygon class="st2" points="453,670.9 479,655.8 505,670.9 505,701.1 479,716.2 453,701.1 	"/>
+                </g>
+                <g id="Layer_3">
+                    <text transform="matrix(1 0 0 1 537 704)" class="st4 st5">WordPress Development</text>
+                    <text transform="matrix(1 0 0 1 466 220)" class="st4 st6">Nomad Mystic</text>
+                    <text transform="matrix(1 0 0 1 538 348)" class="st4 st5">Web Desgin Delevopment</text>
+                    <text transform="matrix(1 0 0 1 538 525)" class="st4 st5">UI Development</text>
+                </g>
+                </svg>
+				<!--<div>-->
+            <!--<div class="floatLeft">-->
+                <!--<img src="_/assets/homePageTwoHexTriangle.svg" class="homePageTwoHexTriangle" alt="Testing">-->
+            <!--</div>-->
+            <!--<div class="floatLeft">-->
+                <!--<img src="_/assets/homePageTwoTitleBullet.svg" class="homePageTwoTitleBullet" alt="Testing">-->
+            <!--</div>-->
+            <!--<div class="floatLeft">-->
+                <!--<h2>Nomad Mystic</h2>-->
+            <!--</div>-->
+        <!--</div>-->
+            <!--<div class="clearBoth"></div>-->
+            <!--<div class="homePageAnimationSectionTwo">-->
+                    <!--<span class="homePageAnimationSectionTwoInner">-->
+                        <!--<div class="floatLeft">-->
+                            <!--<img src="_/assets/homePageTwoBulletLines.svg" class="homePageTwoBulletLines img-responsive" alt="Testing">-->
+                        <!--</div>-->
+                        <!--<div class="floatLeft">-->
+                            <!--<img src="_/assets/homePageTwoSmallHeaderHex.svg" class="homePageTwoSmallHeaderHexOne img-responsive" alt="Testing">-->
+                        <!--</div>-->
+                        <!--<div class="floatLeft">-->
+                            <!--<img src="_/assets/homePageTwoSmallHeaderHex.svg" class="homePageTwoSmallHeaderHexTwo img-responsive" alt="Testing">-->
+                        <!--</div>-->
+                        <!--<div class="floatLeft">-->
+                            <!--<img src="_/assets/homePageTwoSmallHeaderHex.svg" class="homePageTwoSmallHeaderHexThree img-responsive"  alt="Testing">-->
+                        <!--</div>-->
 
-                        <div class="floatLeft">
-                            <h3 class="homePageTwoH3One">Web Desgin &amp; Delevopment</h3>
-                        </div>
-                        <div class="floatLeft">
-                            <h3 class="homePageTwoH3Two">UI Development</h3>
-                        </div>
-                        <div class="floatLeft">
-                            <h3 class="homePageTwoH3Three">WordPress Development</h3>
-                        </div>
-                    </span>
-                </div>
-			</div>
+                        <!--<div class="floatLeft">-->
+                            <!--<h3 class="homePageTwoH3One">Web Desgin &amp; Delevopment</h3>-->
+                        <!--</div>-->
+                        <!--<div class="floatLeft">-->
+                            <!--<h3 class="homePageTwoH3Two">UI Development</h3>-->
+                        <!--</div>-->
+                        <!--<div class="floatLeft">-->
+                            <!--<h3 class="homePageTwoH3Three">WordPress Development</h3>-->
+                        <!--</div>-->
+                    <!--</span>-->
+            <!--</div>-->
+        <!--</div>-->
 		</div>
 		<div class="section" id="sectionThree">
             <h2>Featured Works Portal</h2>
@@ -192,8 +215,10 @@
 		
 
 		<div class="section" id="sectionFour">
-			<div class="displayFlex flexParent">
-				<!--<div class="displayFlex">-->
+			<div class="">
+            <?xml version="1.0" encoding="utf-8"?>
+            <!-- Generator: Adobe Illustrator 19.1.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+            <!--<div class="displayFlex">-->
 					<!--<div class="homePageFourImg"> -->
 						<!--<img src="_/assets/testSiteSelections.jpg" alt="Testing">-->
 					<!--</div>-->
