This is the 10th commit and push to remote for newNomadMystic. I added anchor tags to image for click events and added HTMl page featuredMidTerm.

--- a/index1.html
+++ b/index1.html
@@ -63,7 +63,7 @@
 		<div class="section" id="sectionTwo">
             <div class="sectionTwoAnimations">
                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
-	            viewBox="0 0 1400 1000" style="enable-background:new 0 0 1200 800;" xml:space="preserve" id="sectionTwoSVG">
+	            viewBox="0 0 1400 800" style="enable-background:new 0 0 1200 800;" xml:space="preserve" id="sectionTwoSVG">
                 <g id="Layer_2">
                     <polygon class="st2" points="39,119.3 158.5,50.5 278,119.3 278,257 158.5,325.8 39,257 	"/>
                     <polygon class="st3" points="317,188.1 195.6,256.9 74.1,325.6 74.1,188.1 74.1,50.7 195.6,119.4 	"/>
@@ -130,8 +130,10 @@
             <div class="container-fluid">
             	<div class="row">
             		<div class="col-sm-6 col-md-6 homeFeaturedOne" >
-                        <a href="#"><div class="overlay1"></div></a>
-                        <img src="_/assets/cas222Midterm.jpg" alt="Testing" id="homeFeaturedOne">
+                        <a href="featuredMidTerm.html">
+                            <div class="overlay1"></div>
+                        </a>
+                        <img src="_/assets/cas222Midterm.jpg" alt="Image of the Milky Way an is link to featured Mid Term from CAS222 Spring 2015" id="homeFeaturedOne">
             		</div><!--col-md-6-->
                     <div class="col-sm-6 col-md-6 text-right">
                         <div class="seventyFivePercentWidth">
