This is the 11th commit and push to remote for newNomadMystic. I created test pages for <pre> prettier tags to showcase code from CIS135w. I created a test page for bootstrap tab system to house <pre> code.

--- a/testingTabs.html
+++ b/testingTabs.html
@@ -22,76 +22,21 @@
     <div class="tab-content">
         <div role="tabpanel" class="tab-pane active" id="home">
             <pre class="prettyprint">
-    <xmp>
-        * {
+                <xmp>
+                    <div id="snippetOutputOne"></div>
+                </xmp>
+            </pre>
+        </div>
+        <script>
 
-        div#divContainer {
-        margin-left: auto;
-        margin-right: auto;
-        width: 350px;
-        }
 
-        table {
-        width: 100%;
-        margin-bottom: 2em;
-        }
-
-        th, td {
-        border: 2px solid black;
-        }
-
-        table th {
-        font-size: 1.1em;
-        font-weight: bold;
-        background-color: #7fb;
-        padding: 0.2em;
-        border: 3px solid black;
-        }
-    </xmp>
-        </pre></div>
+        </script>
         <div role="tabpanel" class="tab-pane" id="profile">
             <pre class="prettyprint">
-    <xmp>
-        * {
-        margin: 0;
-        padding: 0;
-        }
+                <xmp>
 
-        body {
-        padding: 2em;
-        font-family: Verdana, Geneva, sans-serif;
-        font-size: 90%;
-        background-color: #565;
-        }
-
-        h1 {
-        margin-bottom: 0.8em;
-        }
-
-        div#divContainer {
-        margin-left: auto;
-        margin-right: auto;
-        width: 350px;
-        }
-
-        table {
-        width: 100%;
-        margin-bottom: 2em;
-        }
-
-        th, td {
-        border: 2px solid black;
-        }
-
-        table th {
-        font-size: 1.1em;
-        font-weight: bold;
-        background-color: #7fb;
-        padding: 0.2em;
-        border: 3px solid black;
-        }
-        </xmp>
-        </pre>
+                </xmp>
+            </pre>
         </div>
         <div role="tabpanel" class="tab-pane" id="messages">...</div>
         <div role="tabpanel" class="tab-pane" id="settings">...</div>
